# rl-basics

./: .gitignore  pyproject.toml  requirements.txt
agents/: q_agent.py
envs/: __init__.py  decoder_env.py  decoder_env_v2.py
training/: evaluate.py  run_naive_sim.py  train.py  train_ppo.py
